RESOLVED FIXED178088
Fix typo of virtual keyword in PageClientImplIOS.h
https://bugs.webkit.org/show_bug.cgi?id=178088
Summary Fix typo of virtual keyword in PageClientImplIOS.h
Jeremy Jones
Reported 2017-10-09 10:55:41 PDT
Fix typo of virtual keyword in PageClientImplIOS.h
Attachments
Patch (1.43 KB, patch)
2017-10-09 10:58 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-10-09 10:58:58 PDT
WebKit Commit Bot
Comment 2 2017-10-09 16:27:58 PDT
Comment on attachment 323188 [details] Patch Clearing flags on attachment: 323188 Committed r223083: <http://trac.webkit.org/changeset/223083>
WebKit Commit Bot
Comment 3 2017-10-09 16:27:59 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-10-09 16:28:50 PDT
Note You need to log in before you can comment on or make changes to this bug.