Fix typo of virtual keyword in PageClientImplIOS.h https://bugs.webkit.org/show_bug.cgi?id=178088

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-10-09
Reviewed by Simon Fraser.

This compile error happens when FULLSCREEN_API is enabled for iOS.
Remove the redundant virtual keyword since function is marked override.

* UIProcess/ios/PageClientImplIOS.h:

Canonical link: https://commits.webkit.org/194350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223083 268f45cc-cd09-0410-ab3c-d52691b4dbfc